src/sass/templates/_ndla_timeline.scss
/* ... */
//////////////////////////////////////////////////////////////
/// PAGES > BOOKS/ERAS
//////////////////////////////////////////////////////////////

.lo_anchorList {
  ul {
    display: flex;
    list-style: none;
    flex-wrap: wrap;
    margin: 0;

    padding: 0 {

    }

    li {
      margin: 0 ($base-line-height / 4) ($base-line-height / 4) 0;
    }

    a {
      display: block;
      padding: ($base-line-height / 8) ($base-line-height / 2);
      border-radius: $base-line-height;
      color: $dark-grey;
      text-decoration: none;
      background: $light-grey;
    }
  }
}

.lo_pageTopBar {
  background: $main-color;
  color: white;
  position: sticky;
  top: 0;
  padding: 0 ($base-line-height / 4);
  height: $topBarHeight;
  display: flex;
  align-items: center;
  z-index: 1;
  color: white;
  font-size: 0.9rem;
}

.pageTopBar_firstItem {
  text-transform: uppercase;
  font-weight: bold;
  margin: 0 ($base-line-height / 2);
}

.page_banner {
  position: relative;
  overflow: hidden;
  height: 30vh;
  background: $secondary-color;

  @include breakpoint($large) {
    height: 33vh;
  }
}

.page_banner img {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin: 0;

  @include breakpoint($large) {
    transform: translate(-50%, -25%);
  }
}

.page_banner_title {
  @extend %restrained;

  position: relative;
  background: white;
  padding-top: $base-line-height / 8;

  @include breakpoint($large) {
    bottom: $base-line-height * 4;
  }
}

.page_content {
  @extend %restrained;

  position: relative;
  bottom: $base-line-height * 3;
  background: white;
}

.page h3::after {
  content: "";
  display: block;
  background: $secondary-color;
  width: $base-line-height * 4;
  height: $base-line-height / 5;
  margin-top: $base-line-height / 2;
}

/// PAGE > BOOK SPECIFIC

.page_content_bookAuthor {
  border-bottom: 1px dashed $middle-grey;
  padding-top: 0;
  padding-bottom: $base-line-height;
}

.page_content_bookName {
  background: white;
  padding-top: $base-line-height;
  margin-bottom: 0;
}

.page_content_author {
  display: flex;
  font-weight: bold;
}

.page_content_author svg {
  margin-right: $base-line-height / 4;
  fill: $main-color;
}

.page_content img {
  width: auto;

  &.left-image {
    padding-right: 25px;
  }
}

/// PAGE > ERA SPECIFIC

.page_circleEra {
  @extend %restrained;

  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  margin-top: -$base-line-height * 8;

  @include breakpoint($large) {
    margin-top: -$base-line-height * 10;
  }
}

